fixes extra white space on the bottom of navbar in sm view

--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -19,14 +19,14 @@
     @include sm {
       display: flex;
       width: 200px;
-      height: 100px;
-      border-radius: 50% 50%;
+      height: 50px;
+      border-radius: 50% 50% 0 0;
       background-color: $orange;
       flex-direction: column;
       align-items: center;
       box-shadow: 2px 2px 0 2px rgba($color: #000000, $alpha: 0.5);
       position: absolute;
-      bottom: 45%;
+      bottom: 50%;
       z-index: 0;
 
       .line {
@@ -35,10 +35,10 @@
         background: rgba($color: #000000, $alpha: 0.2);
         border-radius: 6px;
         position: absolute;
-        top: 24px;
+        top: 18px;
 
         & ~ .line {
-          top: 36px;
+          top: 30px;
         }
       }
     }
